mdapi/objects/Fattura_Shadow__c/Fattura_Shadow__c.object-meta.xml
<CustomObject>
    <label>Fattura Shadow</label>
    <nameField>
        <label>Fattura Shadow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fatture Shadow</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>