mdapi/objects/Fattura_Shadow__c/fields/Fattura__c.field-meta.xml
<CustomField>
    <fullName>Fattura__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fattura</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Fatture Shadow</relationshipLabel>
    <relationshipName>Fatture_Shadow</relationshipName>
    <type>Lookup</type>
</CustomField>