mdapi/objects/Fattura_Shadow__c/fields/Totale_Durata_Visite__c.field-meta.xml
<CustomField>
    <fullName>Totale_Durata_Visite__c</fullName>
    <formula>Fattura__r.Total_Duration_in_minutes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totale Durata Visite</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>