mdapi/objects/Fattura_Shadow__c/fields/Totale_Fattura__c.field-meta.xml
<CustomField>
    <fullName>Totale_Fattura__c</fullName>
    <formula>Fattura__r.Totale_Fattura__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totale Fattura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>