mdapi/objects/Fattura_Shadow__c/fields/Totale_Numero_di_Biglietti_Static__c.field-meta.xml
<CustomField>
    <fullName>Totale_Numero_di_Biglietti_Static__c</fullName>
    <label>Totale Numero di Biglietti Static</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>