mdapi/objects/Fattura_Shadow__c/fields/Totale_Numero_di_Visite__c.field-meta.xml
<CustomField>
    <fullName>Totale_Numero_di_Visite__c</fullName>
    <formula>Fattura__r.Total_Number_of_Visits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totale Numero di Visite</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>